--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Pomodoro</title>
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="./sass/style.scss">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
-
   </head>
+
   <body>
 
-    <div id="root"></div>
+    <img id="unicorn" src="assets/unicorn.svg" alt="Fluffy!!">
 
-    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-
+    <div id="main"></div>
     <script src="index.js"></script>
 
   </body>
+
 </html>
